Replies logic finished, working on css

--- a/src/main/webapp/frontend/src/index.css
+++ b/src/main/webapp/frontend/src/index.css
@@ -440,8 +440,10 @@ label {
     box-shadow: 0 0 1em 0 #683ed1;
 }
 
-.btn-submit:focus {
+.btn-submit:focus,
+.btn-submit:active {
     background-color: #6c2dc7 !important;
+    color: white !important;
     box-shadow: 0 0 1em 0 #6c2dc7 !important;
 }
 
@@ -592,7 +594,6 @@ th {
 }
 
 .createComment {
-    max-width: 70%;
     display: flex;
     justify-content: left;
 }
@@ -617,7 +618,6 @@ th {
 .commentsCount {
     margin: 0 auto;
     text-align: left;
-    width: 70%;
     padding-bottom: 0.5em;
 }
 
@@ -626,8 +626,11 @@ th {
     width: 100%;
 }
 
+.comment-wrapper {
+    position: relative;
+}
+
 .comment {
-    max-width: 70%;
     display: flex;
     justify-content: left;
     position: relative;
@@ -647,8 +650,8 @@ th {
 
 .reply {
     position: absolute;
-    right: 0;
-    bottom: 0;
+    left: 12%;
+    bottom: -25%;
 }
 
 .messageContent {
@@ -843,4 +846,19 @@ input:focus {
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: 50%;
+}
+
+.replies {
+    outline: 1px solid blue;
+    padding-left: 0;
+}
+
+.toggle-replies {
+    position: absolute;
+    left: 22%;
+    bottom: -25%;
+}
+
+.toggle-replies > .btn.btn-text {
+    font-size: 0.8rem;
 }
