--- a/src/main/webapp/frontend/src/index.css
+++ b/src/main/webapp/frontend/src/index.css
@@ -1,11 +1,9 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
-
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 body {
     margin: 0;
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-        "Helvetica Neue", sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: whitesmoke;
@@ -621,6 +619,12 @@ th {
     padding-bottom: 0.5em;
 }
 
+.recipeComments {
+    padding-left: 30px;
+    padding-right: 30px;
+    transition: 0.5s;
+}
+
 .recipeComment {
     margin-left: 15px !important;
     width: 100%;
@@ -710,6 +714,11 @@ th {
 .btn-success:active:focus,
 .show > .btn-success.dropdown-toggle:focus {
     box-shadow: 0 0 0 0.25rem rgba(200, 0, 125, 0.5);
+}
+
+.btn.btn-text:active,
+.btn.btn-text:focus {
+    box-shadow: none !important;
 }
 
 .filters__dialog-button {
@@ -849,8 +858,7 @@ input:focus {
 }
 
 .replies {
-    outline: 1px solid blue;
-    padding-left: 0;
+    padding-left: 30px;
 }
 
 .toggle-replies {
@@ -861,4 +869,8 @@ input:focus {
 
 .toggle-replies > .btn.btn-text {
     font-size: 0.8rem;
+}
+
+.allComments {
+    padding-bottom: 1px;
 }
